--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
         env:
           GITHUB_USERNAME: x-access-token
           GITHUB_TOKEN: ${{ secrets.READER_TOKEN }}
-        run: "mvn install --settings .m2/maven-settings.xml --file pom.xml"
+        run: "mvn install --file pom.xml"
       - name: "Login to GitHub Docker Registry"
         uses: "docker/login-action@v1"
         with:
